updated all pages with changes to nav, hero, and thumbnails

--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -31,7 +31,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_900/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -41,7 +41,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_422/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -51,7 +51,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_336/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -383,14 +383,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_118/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_288,h_124/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="136"
-              height="59"
+              width="144"
+              height="62"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover; aspect-ratio: 136 / 59;"
+              style="object-fit: cover; aspect-ratio: 144 / 62;"
             />
           </a>
         </div>
@@ -436,21 +436,21 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_900/v1748537741/sports-tube-desktop_c9qmdx.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1748537741/sports-tube-tablet_mkowrj.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_422/v1748537741/sports-tube-tablet_mkowrj.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1748537741/sports-tube-tablet_mkowrj.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_336/v1748537741/sports-tube-tablet_mkowrj.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
@@ -539,24 +539,24 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_384/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_358/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1743469949/seo-grade_mmztmf.avif"
                   alt="Sports Tube PageSpeed Insights score showing 100/100 performance optimization for desktop and mobile"
-                  width="119"
-                  height="99"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="object-fit: contain;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -568,22 +568,22 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_564/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_528/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   alt="Sports Tube web design concept combining ESPN+ style layout with bold Bebas Neue typography and a red, white, blue color palette"
-                  width="147"
-                  height="111"
+                  width="127"
+                  height="95"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
@@ -597,22 +597,22 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_564/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_528/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   alt="Sports Tube case study highlighting AI content creation, SEO strategy, and Core Web Vitals optimization"
-                  width="147"
-                  height="111"
+                  width="127"
+                  height="95"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
@@ -626,22 +626,22 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_564/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_528/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   alt="Explore Sports Tube Video Blog, a website created by Genny Allison showcasing a fast-loading, responsive sports blog with AI-generated content "
-                  width="147"
-                  height="111"
+                  width="127"
+                  height="95"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
