--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -495,24 +495,24 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_368/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_346/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_206/v1748467140/github-icon_tie2av.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1748467140/github-icon_tie2av.avif"
                   alt="GitHub logo"
-                  width="127"
-                  height="103"
+                  width="146"
+                  height="121"
                   loading="auto"  
-                  style="object-fit: cover;"
+                  style="aspect-ratio: 146 / 121; object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -625,10 +625,10 @@
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-                  width="127"
-                  height="104"
+                  width="147"
+                  height="121"
                   loading="auto"  
-                  style="object-fit: cover;"
+                  style="aspect-ratio: 147 / 121; object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
