--- a/pages/project4/project4-intro.html
+++ b/pages/project4/project4-intro.html
@@ -32,7 +32,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_900/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -42,7 +42,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_422/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -52,7 +52,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_336/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -399,14 +399,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_118/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_288,h_124/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="136"
-              height="59"
+              width="144"
+              height="62"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover; aspect-ratio: 136 / 59;"
+              style="object-fit: cover; aspect-ratio: 144 / 62;"
             />
           </a>
         </div>
@@ -452,21 +452,21 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_900/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_422/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_336/v1749150451/texas-remodelers-hero-tablet_seahdu.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
@@ -477,7 +477,7 @@
             alt="Intro page for Texas Remodelers Wordpress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout with links to detailed case study sections"
             width="164"
             height="168"
-            style="object-fit: cover;"
+            style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -555,24 +555,24 @@
           <div class="thumbnails images fancy-border-img">
             <picture>
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_384/v1743469949/seo-grade_mmztmf.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1743469949/seo-grade_mmztmf.avif"
                 type="image/avif"
                 media="(min-width: 1200px)"
                 sizes="100vw"
               />
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_358/v1743469949/seo-grade_mmztmf.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1743469949/seo-grade_mmztmf.avif"
                 type="image/avif"
                 media="(min-width: 481px) and (max-width: 1199px)"
                 sizes="100vw"
               />
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1743469949/seo-grade_mmztmf.avif"
-                alt="Texas Remodelers PageSpeed Insights Optimization in process thumbnail"
-                width="119"
-                height="99"
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1743469949/seo-grade_mmztmf.avif"
+                alt="Sports Tube PageSpeed Insights score showing 100/100 performance optimization for desktop and mobile"
+                width="127"
+                height="104"
                 loading="auto"  
-                style="object-fit: contain;"
+                style="object-fit: cover;"
                 fetchpriority="auto"
                 decoding="async"
               />
@@ -584,22 +584,22 @@
           <div class="thumbnails fancy-border-img">
             <picture>
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_564/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
                 type="image/avif"
                 media="(min-width: 1200px)"
                 sizes="100vw"
               />
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_528/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
                 type="image/avif"
                 media="(min-width: 481px) and (max-width: 1199px)"
                 sizes="100vw"
               />
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
                 alt="Image of a Texas Remodelers Bathroom, thumbnail to the design page."
-                width="147"
-                height="111"
+                width="127"
+                height="104"
                 loading="auto"  
                 style="object-fit: cover;"
                 fetchpriority="auto"
@@ -613,22 +613,22 @@
           <div class="thumbnails images fancy-border-img">
             <picture>
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_564/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
                 type="image/avif"
                 media="(min-width: 1200px)"
                 sizes="100vw"
               />
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_528/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
                 type="image/avif"
                 media="(min-width: 481px) and (max-width: 1199px)"
                 sizes="100vw"
               />
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1749151340/texas-remodelers-casestudy-thumbnail_meoexo.avif"
                 alt="Portfolio case study highlighting AI content, SEO strategy, and Core Web Vitals optimization"
-                width="147"
-                height="111"
+                width="127"
+                height="104"
                 loading="auto"  
                 style="object-fit: cover;"
                 fetchpriority="auto"
@@ -642,19 +642,19 @@
           <div class="thumbnails fancy-border-img">
             <picture>
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_716/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
                 type="image/avif"
                 media="(min-width: 1200px)"
                 sizes="100vw"
               />
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_576/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
                 type="image/avif"
                 media="(min-width: 481px) and (max-width: 1199px)"
                 sizes="100vw"
               />
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_242/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1749151340/texas-remodelers-finale-thumbnail_jazrki.avif"
                 alt="Final responsive version of the Texas Remodelers Site designed with SEO and AI integration"
                 width="147"
                 height="121"
