updated project2-intro and project3-intro to match the changes made to project1-intro

--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -568,22 +568,22 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   alt="Sports Tube web design concept combining ESPN+ style layout with bold Bebas Neue typography and a red, white, blue color palette"
                   width="127"
-                  height="95"
+                  height="104"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
@@ -597,22 +597,22 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_376/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,422,h_348/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   alt="Sports Tube case study highlighting AI content creation, SEO strategy, and Core Web Vitals optimization"
                   width="127"
-                  height="95"
+                  height="104"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
@@ -626,22 +626,22 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_470,h_340/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_316/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_190/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   alt="Explore Sports Tube Video Blog, a website created by Genny Allison showcasing a fast-loading, responsive sports blog with AI-generated content "
                   width="127"
-                  height="95"
+                  height="104"
                   loading="auto"  
                   style="object-fit: cover;"
                   fetchpriority="auto"
