--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -632,24 +632,24 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_716/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_576/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_242/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
                   alt="Final responsive version of the Sports Tube Community blog designed with SEO and AI integration"
-                  width="147"
-                  height="121"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="aspect-ratio: 147 / 121; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
