missed a thumbnail in intro 2&3

--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -638,12 +638,12 @@
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_242/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
                   alt="Explore Sports Tube Video Blog, a website created by Genny Allison showcasing a fast-loading, responsive sports blog with AI-generated content "
-                  width="127"
-                  height="104"
+                  width="147"
+                  height="121"
                   loading="auto"  
-                  style="object-fit: cover;"
+                  style="aspect-ratio: 147 / 121; object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
