--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -644,12 +644,12 @@
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_242/v1748888175/sports-tube-comm-finale-thumbnail_szy5ys.avif"
                   alt="Final responsive version of the Sports Tube Community blog designed with SEO and AI integration"
-                  width="127"
-                  height="104"
+                  width="147"
+                  height="121"
                   loading="auto"  
-                  style="object-fit: cover;"
+                  style="aspect-ratio: 147 / 121; object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
