--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -603,7 +603,7 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,422,h_348/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1748534937/sports-tube-casestudy-thumbnail_esjobf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
