ensured hero images in project 4 were correct

--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -429,13 +429,13 @@
             alt="Intro page for Texas Remodelers Wordpress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout with links to detailed case study sections"
             width="164"
             height="168"
-            style="object-fit: cover;"
+            style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
             decoding="async"
           />
         </picture>
-
+        
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
           <h2 >showcasing the craft</h2>
