--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -437,7 +437,7 @@
             alt="Intro page for Texas Remodelers Wordpress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout with links to detailed case study sections"
             width="164"
             height="168"
-            style="object-fit: cover;"
+            style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
             decoding="async"
