updated preload links and hero img to match the rest of project4

--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -61,7 +61,8 @@
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1749150452/texas-remodelers-hero-mobile_pnrqxt.avif"
       type="image/avif"
       media="(max-width: 480px)"
-    />  
+      fetchpriority="high"
+    /> 
 
     <link
       class="tab-logo"
